reworkFileLoadingAndGameCreationLogic